# High-Performance-ML-API

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.gateway  Dockerfile.inference  MONITORING.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: inference-batcher.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
scripts/: check-onnx.sh  load-test.sh
src/benchmarks/: load_test.py  locustfile.py  locustfile_gateway.py  locustfile_inference.py  user.py
src/gateway/: README.md  app.py
src/gateway/api/: exception_handlers.py  lifespan.py  routes.py  schemas.py
src/gateway/auth/: api_key_db.py  auth.py  middleware.py  rate_limiter.py
src/gateway/utils/: key_management.py
src/inference/: README.md  app.py  batcher.py
src/inference/api/: app.py  batcher.py  exception_handlers.py  lifespan.py  metrics.py  routes.py  schemas.py
src/inference/models/: base.py  hugginface.py  huggingface.py
src/load_tests/: load_test.py
src/onnx_util/: export.py  huggingface_export.py
src/server/inference/: model.py
src/shared/: correlation_ids.py  logging_config.py  middleware.py
