[project]
name = "ml-inference-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.0.1",
    "numpy>=2.3.4",
    "python-dotenv>=1.1.1",
    "structlog>=25.4.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["benchmarks*", "inference*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
